fixed overflow issue with css grid

--- a/client/src/components/Notes.css
+++ b/client/src/components/Notes.css
@@ -1,6 +1,5 @@
 #allNotesContainer{
     display: grid;
-    grid-template-rows: 25% 25% 25% 25%;
     grid-template-columns: 25% 25% 25% 25%;
 }
 #noteBox{
